--- a/cs/ConwayTest/ConwayTest.csproj
+++ b/cs/ConwayTest/ConwayTest.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <Compile Include="CellTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RulesTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
