--- a/cs/Conway/Conway.csproj
+++ b/cs/Conway/Conway.csproj
@@ -41,6 +41,7 @@
   <ItemGroup>
     <Compile Include="Cell.cs" />
     <Compile Include="Grid.cs" />
+    <Compile Include="GridBuilder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rules.cs" />
   </ItemGroup>
