--- a/cs/ConwayTest/ConwayTest.csproj
+++ b/cs/ConwayTest/ConwayTest.csproj
@@ -46,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CellTest.cs" />
+    <Compile Include="GridBuilderTest.cs" />
     <Compile Include="GridTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RulesTest.cs" />
